# faxtu_rs

./: .gitignore  Cargo.toml  LICENSE  README.org  flake.nix
config/: development.toml
migration/src/: m20220101_000001_create_table.rs
src/: env.rs  main.rs
src/api/: ping.rs
src/config/: mod.rs
src/tests/: mod.rs
src/tests/api/: ping.rs
