[package]
name = "faxtu_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
config = "0.15.7"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
